Refactor services: subscription flow, analytics, PDFs
Consolidated and cleaned up multiple service implementations: simplified null checks in NotificationService, replaced PdfPCell.* border constants with Rectangle.* in ReportExportService, and extracted a YEAR_MONTH_FMT constant in RevenueAnalytics. Major refactor in RevenueAnalytics' churn calculation to fix casting and edge cases by splitting logic into helpers (findLatestIndex, calculateChurnForIndex/FirstSnapshot/Fallback) and improved rounding. SubscriptionFlowServiceImpl reorganized into smaller helper methods, added SLF4J logging, extracted coupon validation/discount logic, modularized invoice/line item/payment handling, improved response building and audit logging; corresponding unit tests updated. SupportServiceImpl switched to Stream.toList(), removed unused imports and made boolean checks null-safe. Updated sonarqube report entries.